# nunchaku-torch

./: .gitignore  README.md  pyproject.toml
scripts/: benchmark.py  profile_xpu.py  validate.py
src/nunchaku_torch/: __init__.py  device.py  utils.py  zimage.py  zimage_cli.py
src/nunchaku_torch/lora/flux/: __init__.py  packer.py  utils.py
src/nunchaku_torch/models/: __init__.py  attention.py  embeddings.py  linear.py  utils.py
src/nunchaku_torch/models/attention_processors/: __init__.py  qwenimage.py  zimage.py
src/nunchaku_torch/models/transformers/: __init__.py  transformer_qwenimage.py  transformer_zimage.py  utils.py
src/nunchaku_torch/models/unets/: __init__.py  unet_sdxl.py
src/nunchaku_torch/ops/: __init__.py  cpu_ops.py  fused.py  gemm.py  gemv.py  quantize.py  xpu_ops.py
tests/: test_cpu_smoke.py  test_device.py  test_runtime_autonomy.py
